--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,5 +21,36 @@
         </div>
     </div>
 
+    <div class="description">
+        <div class="wrap">
+            <div class="description-txt">
+                <img src="{{ asset('images/description.svg') }}" alt="Description" width="100px" height="100px">
+                <h1>La plateforme CRM dont vous ne pourrez pas vous passer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid beatae consequatur, consequuntur
+                    deserunt
+                    dolore exercitationem in inventore iste iure laboriosam necessitatibus nisi nobis numquam optio qui
+                    quo
+                    sunt
+                    veritatis vero.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="first-step">
+        <div class="wrap">
+            <div class="first-step-txt">
+                <div class="advantages">
+                    <div class="advantages-33"><img src="{{ asset('images/rapide.svg') }}" alt="Rapide"><h2>Rapide</h2></div>
+                    <div class="advantages-33"><img src="{{ asset('images/facile.svg') }}" alt="Facile"><h2>Facile</h2></div>
+                    <div class="advantages-33"><img src="{{ asset('images/complet.svg') }}" alt="Complet"><h2>Complet</h2></div>
+                </div>
+                <div class="clear"></div>
+                <h1>Faite vos premier pas avec notre plateforme CRM</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias animi aperiam asperiores consequuntur
+                    id, impedit iure molestias perferendis quasi repellat reprehenderit ut voluptas. Accusamus
+                    accusantium nam nostrum numquam sequi voluptates?</p>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
