--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -39,9 +39,12 @@
         <div class="wrap">
             <div class="first-step-txt">
                 <div class="advantages">
-                    <div class="advantages-33"><img src="{{ asset('images/rapide.svg') }}" alt="Rapide"><h2>Rapide</h2></div>
-                    <div class="advantages-33"><img src="{{ asset('images/facile.svg') }}" alt="Facile"><h2>Facile</h2></div>
-                    <div class="advantages-33"><img src="{{ asset('images/complet.svg') }}" alt="Complet"><h2>Complet</h2></div>
+                    <div class="advantages-33"><img src="{{ asset('images/rapide.svg') }}" alt="Rapide">
+                        <h2>Rapide</h2></div>
+                    <div class="advantages-33"><img src="{{ asset('images/facile.svg') }}" alt="Facile">
+                        <h2>Facile</h2></div>
+                    <div class="advantages-33"><img src="{{ asset('images/complet.svg') }}" alt="Complet">
+                        <h2>Complet</h2></div>
                 </div>
                 <div class="clear"></div>
                 <h1>Faite vos premier pas avec notre plateforme CRM</h1>
@@ -49,6 +52,33 @@
                     id, impedit iure molestias perferendis quasi repellat reprehenderit ut voluptas. Accusamus
                     accusantium nam nostrum numquam sequi voluptates?</p>
             </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="wrap">
+            <div class="block33">
+                <p>
+                    NFactory School <br/>
+                    24 Place Saint-Marc <br/>
+                    76000 Rouen <br/>
+                    02 35 70 04 04
+                </p>
+            </div>
+            <div class="block33">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis fuga neque non quisquam reiciendis
+                    rem sapiente, suscipit.</p>
+            </div>
+            <div class="block33">
+                <p>
+                    <a href="">Informations</a> <br/>
+                    <a href="">Avantages</a>
+                </p>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <div class="copyright">
+            <p>© Copyright 2021 CRM. Tous droit réservés.</p>
         </div>
     </div>
 {% endblock %}
