update register form and add default role "user"

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -107,6 +107,8 @@
             {{ form_row(registrationForm.first_name) }}
             {{ form_row(registrationForm.name) }}
             {{ form_row(registrationForm.email) }}
+            {{ form_row(registrationForm.adress) }}
+            {{ form_row(registrationForm.phonenumber) }}
             {{ form_row(registrationForm.plainPassword, {
                 label: 'Password'
             }) }}
