--- a/templates/add_exchange/index.html.twig
+++ b/templates/add_exchange/index.html.twig
@@ -3,13 +3,30 @@
 {% block title %}Add Exchange{% endblock %}
 
 {% block body %}
-    <h1>Add exchange</h1>
+    <style>
+        body {
+            background-color: var(--primary-color);
+        }
+    </style>
 
-    {{ form_start(exchange) }}
-    {{ form_row(exchange.type) }}
-    {{ form_row(exchange.detail) }}
+    <div class="fix-block-dashboard"></div>
+
+    <div class="block-dashboard">
+
+        <div class="form">
+
+            <div class="form-txt">
+                <h1>Add exchange</h1>
+
+                {{ form_start(exchange) }}
+                {{ form_row(exchange.type) }}
+                {{ form_row(exchange.detail) }}
 
 
-    <button type="submit" class="btn">Add </button>
-    {{ form_end(exchange) }}
+                <button type="submit" class="btn">Add</button>
+                {{ form_end(exchange) }}
+            </div>
+        </div>
+    </div>
+    <div class="clear"></div>
 {% endblock %}
