--- a/templates/add_quotation/index.html.twig
+++ b/templates/add_quotation/index.html.twig
@@ -3,16 +3,33 @@
 {% block title %}Add Quotation{% endblock %}
 
 {% block body %}
-    <h1>Add quotation</h1>
+    <style>
+        body {
+            background-color: var(--primary-color);
+        }
+    </style>
 
-    {{ form_start(quotation) }}
-    {{ form_row(quotation.ref) }}
-    {{ form_row(quotation.status) }}
-    {{ form_row(quotation.TVA) }}
-    {{ form_row(quotation.TTC) }}
-    {{ form_row(quotation.HT) }}
+    <div class="fix-block-dashboard"></div>
+
+    <div class="block-dashboard">
+
+        <div class="form">
+
+            <div class="form-txt">
+                <h1>Add quotation</h1>
+
+                {{ form_start(quotation) }}
+                {{ form_row(quotation.ref) }}
+                {{ form_row(quotation.status) }}
+                {{ form_row(quotation.TVA) }}
+                {{ form_row(quotation.TTC) }}
+                {{ form_row(quotation.HT) }}
 
 
-    <button type="submit" class="btn">Add </button>
-    {{ form_end(quotation) }}
+                <button type="submit" class="btn">Add</button>
+                {{ form_end(quotation) }}
+            </div>
+        </div>
+    </div>
+    <div class="clear"></div>
 {% endblock %}
