--- a/templates/add_ticket/index.html.twig
+++ b/templates/add_ticket/index.html.twig
@@ -3,14 +3,31 @@
 {% block title %}Add Ticket{% endblock %}
 
 {% block body %}
-    <h1>Add ticket</h1>
+    <style>
+        body {
+            background-color: var(--primary-color);
+        }
+    </style>
 
-    {{ form_start(ticket) }}
-    {{ form_row(ticket.object) }}
-    {{ form_row(ticket.details) }}
-    {{ form_row(ticket.status) }}
+    <div class="fix-block-dashboard"></div>
+
+    <div class="block-dashboard">
+
+        <div class="form">
+
+            <div class="form-txt">
+                <h1>Add ticket</h1>
+
+                {{ form_start(ticket) }}
+                {{ form_row(ticket.object) }}
+                {{ form_row(ticket.details) }}
+                {{ form_row(ticket.status) }}
 
 
-    <button type="submit" class="btn">Add </button>
-    {{ form_end(ticket) }}
+                <button type="submit" class="btn">Add</button>
+                {{ form_end(ticket) }}
+            </div>
+        </div>
+    </div>
+    <div class="clear"></div>
 {% endblock %}
