user can choose role in register

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
             <li><a href="">Informations</a></li>
             <li><a href="">Avantages</a></li>
             <li><a href="">Infos 3</a></li>
-            <li><a href="" class="login">Se connecter</a></li>
+            <li><a href="/login" class="login">Se connecter</a></li>
         </ul>
     </div>
 </nav>
