--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -112,6 +112,7 @@
             {{ form_row(registrationForm.plainPassword, {
                 label: 'Password'
             }) }}
+            {{ form_row(registrationForm.roles) }}
             {{ form_row(registrationForm.agreeTerms) }}
 
             <button type="submit" class="btn">S'incrire</button>
