dashboard update front / form

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -88,7 +88,7 @@ body {
     font-family: "Montserrat", serif;
     font-size: 1.2rem;
     line-height: 2rem;
-    scroll-behavior: smooth!important;
+    scroll-behavior: smooth !important;
     position: relative;
 }
 
@@ -179,6 +179,10 @@ a:hover {
     transition: var(--animation);
 }
 
+.unshow {
+    display: none !important;
+}
+
 @media all and (max-width: 1108px) {
     #logo {
         width: 100%;
@@ -214,6 +218,14 @@ a:hover {
         display: block;
         text-align: center;
         padding: 10px 20px;
+    }
+
+    .dashboard {
+        display: none;
+    }
+
+    .unshow {
+        display: block !important;
     }
 
 }
@@ -327,7 +339,6 @@ p {
 }
 
 
-
 .footer {
     background-color: var(--light-black);
     color: var(--simple-white);
@@ -340,7 +351,7 @@ p {
     font-weight: lighter;
 }
 
-.footer .block33:nth-child(3){
+.footer .block33:nth-child(3) {
     text-align: center;
 }
 
@@ -361,7 +372,7 @@ p {
 }
 
 .footer .copyright p {
-    padding: 10px 0!important;
+    padding: 10px 0 !important;
 }
 
 @media screen and  (max-width: 600px) {
@@ -379,7 +390,7 @@ p {
     }
 
     .footer .block33 a {
-        padding: 0!important;
+        padding: 0 !important;
     }
 }
 
@@ -388,7 +399,7 @@ p {
     position: absolute;
     left: 0;
     top: 0;
-    height: 100vh;
+    height: auto;
     box-shadow: 0 2px 4px rgba(45, 62, 80, 0.12);
     background-color: var(--simple-white);
 }
@@ -397,7 +408,7 @@ p {
     width: 50px;
 }
 
-.logo-dashboard img{
+.logo-dashboard img {
     width: 100%;
     margin-left: 50px;
 }
@@ -414,28 +425,17 @@ p {
     float: left;
 }
 
-.unshow {
-    display: none!important;
-}
-
-@media screen and (max-width: 768px) {
-    .dashboard {
-        display: none;
-    }
-    .unshow {
-        display: block!important;
-    }
-}
-
-
-
 form, h1 {
     font-family: "Montserrat", serif;
     padding: 0 10px;
 }
 
+.h1-form-dashboard {
+    margin-left: 20%;
+}
+
 .form,
-.dashboard-homepage{
+.dashboard-homepage {
     border: solid 1px whitesmoke;
     border-radius: 10px;
     position: absolute;
@@ -453,7 +453,8 @@ form, h1 {
 }
 
 label:first-child {
-    /*display: none;*/
+    display: inline-block;
+    width: 20%;
 }
 
 input,
@@ -475,6 +476,7 @@ button {
     transition: all 0.4s ease;
     border: none;
     width: 75%;
+    margin-left: 20%;
 }
 
 button:hover {
@@ -484,16 +486,22 @@ button:hover {
     transition: all 0.4s ease;
 }
 
-@media screen and  (max-width: 500px) {
+@media screen and  (max-width: 700px) {
     .form {
         width: 80%;
     }
+
     .form .form-illustration {
         display: none;
     }
+
     .form .form-txt {
         width: 100%;
         clip-path: none;
         border-radius: 10px;
+    }
+
+    .h1-form-dashboard {
+        margin: 0;
     }
 }
