--- a/templates/add_appointment/index.html.twig
+++ b/templates/add_appointment/index.html.twig
@@ -17,7 +17,7 @@
         <div class="form">
 
             <div class="form-txt">
-                <h1>Ajouter une rendez-vous</h1>
+                <h1 class="h1-form-dashboard">Ajouter une rendez-vous</h1>
 
                 {{ form_start(appointment) }}
                 {{ form_row(appointment.object) }}
@@ -25,9 +25,8 @@
                 {# {{ form_row(appointment.ticket_id) }} #}
                 {# {{ form_row(appointment.compagny_id) }} #}
                 {# {{ form_row(appointment.user_id) }} #}
-
-                <button type="submit" class="btn">Ajoutez un rendez-vous</button>
-                {{ form_end(appointment) }}
+                    <button type="submit" class="btn">Ajoutez un rendez-vous</button>
+                    {{ form_end(appointment) }}
             </div>
         </div>
     </div>
