--- a/templates/add_exchange/index.html.twig
+++ b/templates/add_exchange/index.html.twig
@@ -16,15 +16,13 @@
         <div class="form">
 
             <div class="form-txt">
-                <h1>Add exchange</h1>
+                <h1 class="h1-form-dashboard">Ajouter une note</h1>
 
                 {{ form_start(exchange) }}
                 {{ form_row(exchange.type) }}
                 {{ form_row(exchange.detail) }}
-
-
-                <button type="submit" class="btn">Add</button>
-                {{ form_end(exchange) }}
+                    <button type="submit" class="btn">Ajouter une note</button>
+                    {{ form_end(exchange) }}
             </div>
         </div>
     </div>
