--- a/templates/add_invoice/index.html.twig
+++ b/templates/add_invoice/index.html.twig
@@ -16,7 +16,7 @@
         <div class="form">
 
             <div class="form-txt">
-                <h1>Add invoice</h1>
+                <h1 class="h1-form-dashboard">Ajouter une facture</h1>
 
                 {{ form_start(invoice) }}
                 {{ form_row(invoice.ref) }}
@@ -24,10 +24,8 @@
                 {{ form_row(invoice.TVA) }}
                 {{ form_row(invoice.TTC) }}
                 {{ form_row(invoice.HT) }}
-
-
-                <button type="submit" class="btn">Add</button>
-                {{ form_end(invoice) }}
+                    <button type="submit" class="btn">Ajouter une facture</button>
+                    {{ form_end(invoice) }}
             </div>
         </div>
     </div>
