--- a/templates/add_quotation/index.html.twig
+++ b/templates/add_quotation/index.html.twig
@@ -16,7 +16,7 @@
         <div class="form">
 
             <div class="form-txt">
-                <h1>Add quotation</h1>
+                <h1 class="h1-form-dashboard">Ajouter un devis</h1>
 
                 {{ form_start(quotation) }}
                 {{ form_row(quotation.ref) }}
@@ -24,10 +24,8 @@
                 {{ form_row(quotation.TVA) }}
                 {{ form_row(quotation.TTC) }}
                 {{ form_row(quotation.HT) }}
-
-
-                <button type="submit" class="btn">Add</button>
-                {{ form_end(quotation) }}
+                 <button type="submit" class="btn">Ajouter un devis</button>
+                    {{ form_end(quotation) }}
             </div>
         </div>
     </div>
