--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,13 +49,13 @@
         <div class="logo-dashboard">
             <img src="{{ asset('images/logo.png') }}" alt="Logo">
         </div>
-        <li><a href="/add/appointment">Rendez-vous</a></li>
-        <li><a href="/add/client">Clients</a></li>
-        <li><a href="/add/compagny">Entreprises</a></li>
-        <li><a href="/add/exchange">Notes</a></li>
-        <li><a href="/add/invoice">Factures</a></li>
-        <li><a href="/add/quotation">Devis</a></li>
-        <li><a href="/add/ticket">Tickets</a></li>
+        <li><a href="/appointment">Rendez-vous</a></li>
+        <li><a href="/client">Clients</a></li>
+        <li><a href="/compagny">Entreprises</a></li>
+        <li><a href="/exchange">Notes</a></li>
+        <li><a href="/invoice">Factures</a></li>
+        <li><a href="/quotation">Devis</a></li>
+        <li><a href="/ticket">Tickets</a></li>
         <li><a href="/logout">Deconnexion</a></li>
     </ul>
 </div>
