--- a/templates/add_client/clientAll.html.twig
+++ b/templates/add_client/clientAll.html.twig
@@ -43,9 +43,9 @@
                 </tr>
             {% endfor %}
             </tbody>
-        </table>
+        </table><br/>
 
-        <a href="/add/client">Ajouter une client</a>
+        <a href="/add/client" class="login">Ajouter une client</a>
 
 
     </div>
