--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,6 +33,7 @@
                 <li class="unshow"><a href="/add/invoice">Factures</a></li>
                 <li class="unshow"><a href="/add/quotation">Devis</a></li>
                 <li class="unshow"><a href="/add/ticket">Tickets</a></li>
+                <li class="unshow"><a href="/register">Utilisateurs</a></li>
                 <li class="unshow"><a href="/logout" class="login">Deconnexion</a></li>
             {% else %}
                 <li><a href="#informations">Informations</a></li>
@@ -56,6 +57,7 @@
         <li><a href="/invoice">Factures</a></li>
         <li><a href="/quotation">Devis</a></li>
         <li><a href="/ticket">Tickets</a></li>
+        <li><a href="/register">Utilisateurs</a></li>
         <li><a href="/logout">Deconnexion</a></li>
     </ul>
 </div>
