--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -148,7 +148,7 @@ a {
 }
 
 
-#mainnav ul li .login {
+.login {
     text-decoration: none;
     background-color: var(--button-color);
     color: var(--simple-white);
@@ -158,7 +158,7 @@ a {
     transition: var(--animation);
 }
 
-#mainnav ul li .login:hover {
+.login:hover {
     background-color: var(--button-color-hover);
     color: var(--simple-white);
 }
