--- a/templates/add_compagny/compagnyAll.html.twig
+++ b/templates/add_compagny/compagnyAll.html.twig
@@ -38,13 +38,13 @@
                     <td data-label="TVA">{{ i.tva }}</td>
                     <td data-label="NAF">{{ i.naf }}</td>
                     <td data-label="Siret">{{ i.siret }}</td>
-                    <td data-label="Detail"><a href="/client/{{ i.id }}">ici</a></td>
+                    <td data-label="Detail"><a href="/compagny/{{ i.id }}">ici</a></td>
                 </tr>
             {% endfor %}
             </tbody>
-        </table>
+        </table><br/>
 
-        <a href="/add/compagny">Ajouter une entreprise</a>
+        <a href="/add/compagny" class="login">Ajouter une entreprise</a>
 
 
     </div>
