--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,8 +17,27 @@
 </head>
 <body>
 
+{% if app.user %}
 
-<nav id="mainnav" class="group">
+{% else %}
+
+    <nav id="mainnav" class="group">
+        <div class="wrap">
+            <div id="menu">&#x2261;</div>
+            <div class="logo">
+                <img src="{{ asset('images/logo.png') }}" alt="Logo">
+            </div>
+            <ul class="link">
+                <li><a href="#informations">Informations</a></li>
+                <li><a href="#avantages">Avantages</a></li>
+                <li><a href="/login" class="login">Se connecter</a></li>
+            </ul>
+        </div>
+    </nav>
+{% endif %}
+
+
+<nav id="mainnav" class="group dashboard-nav">
     <div class="wrap">
         <div id="menu">&#x2261;</div>
         <div class="logo">
